--- a/src/sass/gtk/_common-4.0.scss
+++ b/src/sass/gtk/_common-4.0.scss
@@ -3251,7 +3251,7 @@ $switch_animation: switch_ripple_effect 0.1s cubic-bezier(0, 0, 0.2, 1);
 
   to {
     background-image: $switch_checked_image, radial-gradient(circle farthest-corner at center,
-                                      RGB($selected_bg_color, 75%) 100%,
+                                      rgba($selected_bg_color, 75%) 100%,
                                       transparent 0%);
   }
 }
